working on code syntax

--- a/_posts/2014-05-24-Test-Post.md
+++ b/_posts/2014-05-24-Test-Post.md
@@ -34,3 +34,13 @@ Trying a code block
     })
 
 ```
+
+Alternative syntax
+
+{% highlight javascript %}
+
+    [students].forEach(function(student){
+      hire(student)
+    })
+
+{% endhighlight %}
