breaking things out and experimenting with some liquid layout properties

--- a/_posts/2014-05-24-Test-Post.md
+++ b/_posts/2014-05-24-Test-Post.md
@@ -3,12 +3,9 @@ layout: post
 title: Test Post
 category: Coding
 tags: blog test
-year: 2014
-month: 5
-day: 24
 published: true
 summary: A quick test
-description: Test
+image: http://placehold.it/900x300
 ---
 
 ### Testing Markdown / blog
@@ -27,13 +24,6 @@ This should be in paragraph form
 
 Trying a code block
 
-```js
-
-    [students].forEach(function(student){
-      hire(student)
-    })
-
-```
 
 Alternative syntax
 
@@ -44,3 +34,8 @@ Alternative syntax
     })
 
 {% endhighlight %}
+
+
+Embedding a gist example:
+
+{% gist nw/610239 %}
