changed etmoores metadata

--- a/_posts/2014-05-26-Be-gritty.md
+++ b/_posts/2014-05-26-Be-gritty.md
@@ -2,12 +2,13 @@
 layout: post
 title: Be gritty.
 author: Evan Moore
-authorLink: /instructors/etmoore
+authorLink: /students/spring2014/etmoore
 category: advice
 tags: advice
 published: true
 summary: Summary of Cecily Carver's "Things I Wish Someone Had Told Me When I Was Learning How to Code"
 comments: true
+userid: etmoore
 ---
 
 I recently stumbled across Cecily Carver's ([@cecilycarver](https://twitter.com/cecilycarver)) [Things I Wish Someone Had Told Me When I Was Learning How to Code](https://medium.com/learning-to-code/565fc9dcb329), and I thought she made some great points about how to succeed as a programmer.
